# Oda

./: .gitignore  AGENT_DIRECTIVES.md  AGENT_LOG_Hinano.md  AGENT_STATE.md  README.md  ph2-audit-results.txt  post-mortem.md  pyproject.toml  requirements.txt  run_audit.py  run_ph2_audit.py
scripts/: audit_pipeline.py  run_baseline.py  test_walkforward.py  wf_fold0.py
src/oda/: __init__.py  __main__.py  backtest.py  cli.py  config.py  data.py  regime.py  risk.py  signals.py  walkforward.py  zones.py
tests/: _check_import.py  test_data.py  test_zones.py
